// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableList renders correctly with dark color 1`] = `
<div
  className="pt4 pb5 bg-dark-gray white ma2 br2"
>
  <div
    className="w-100 center mw8"
  >
    <h2
      className="fw7 f3 f2-ns white garamond i"
    >
      Projects
    </h2>
  </div>
  <div
    className="overflow-auto"
  >
    <table
      cellSpacing="0"
      className="f6 w-100 mw8 center"
    >
      <thead>
        <tr>
          <th
            className="fw6 bb white tl pb3 pr3"
          >
            Title
          </th>
          <th
            className="fw6 bb white tl pb3 pr3"
          >
            Description
          </th>
        </tr>
      </thead>
      <tbody
        className="lh-copy"
      >
        <tr>
          <td
            className="pv3 pr3 bb white"
          >
            <a
              className="link dim underline white"
              href="/projects/sail/"
            >
              Sail
            </a>
          </td>
          <td
            className="pv3 pr3 bb white"
          >
            Sail is a generative art framework
          </td>
        </tr>
        <tr>
          <td
            className="pv3 pr3 bb white"
          >
            <a
              className="link dim underline white"
              href="/projects/probabilistic/"
            >
              Probabilistic
            </a>
          </td>
          <td
            className="pv3 pr3 bb white"
          >
            Golang implementations of Bloom Filters, Min Sketch Count and Min Hashing.
          </td>
        </tr>
        <tr>
          <td
            className="pv3 pr3 bb white"
          >
            <a
              className="link dim underline white"
              href="/projects/parking/"
            >
              Parking
            </a>
          </td>
          <td
            className="pv3 pr3 bb white"
          >
            Parking is a live art piece in which users claim a parking spot and hopefully make a human connection.
          </td>
        </tr>
        <tr>
          <td
            className="pv3 pr3 bb white"
          >
            <a
              className="link dim underline white"
              href="/projects/clr/"
            >
              clr
            </a>
          </td>
          <td
            className="pv3 pr3 bb white"
          >
            clr is a go library to manage different color spaces, convert between them and compare colors.
          </td>
        </tr>
        <tr>
          <td
            className="pv3 pr3 bb white"
          >
            <a
              className="link dim underline white"
              href="/projects/fokal/"
            >
              Fokal
            </a>
          </td>
          <td
            className="pv3 pr3 bb white"
          >
            Fokal is a simple photography site with the goal of getting good images seen.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="w-100 mw8 center tc pt4"
  >
    <a
      className="f6 br2 ba ph3 pv2 mb2 dib near-white hover-dark-gray bg-animate hover-bg-white no-underline index-button"
      href="/projects"
    >
      View More
    </a>
  </div>
</div>
`;

exports[`TableList renders correctly with light color 1`] = `
<div
  className="pt4 pb5 bg-white black ma2 br2"
>
  <div
    className="w-100 center mw8"
  >
    <h2
      className="fw7 f3 f2-ns black garamond i"
    >
      Projects
    </h2>
  </div>
  <div
    className="overflow-auto"
  >
    <table
      cellSpacing="0"
      className="f6 w-100 mw8 center"
    >
      <thead>
        <tr>
          <th
            className="fw6 bb black tl pb3 pr3"
          >
            Title
          </th>
          <th
            className="fw6 bb black tl pb3 pr3"
          >
            Description
          </th>
        </tr>
      </thead>
      <tbody
        className="lh-copy"
      >
        <tr>
          <td
            className="pv3 pr3 bb black"
          >
            <a
              className="link dim underline black"
              href="/projects/sail/"
            >
              Sail
            </a>
          </td>
          <td
            className="pv3 pr3 bb black"
          >
            Sail is a generative art framework
          </td>
        </tr>
        <tr>
          <td
            className="pv3 pr3 bb black"
          >
            <a
              className="link dim underline black"
              href="/projects/probabilistic/"
            >
              Probabilistic
            </a>
          </td>
          <td
            className="pv3 pr3 bb black"
          >
            Golang implementations of Bloom Filters, Min Sketch Count and Min Hashing.
          </td>
        </tr>
        <tr>
          <td
            className="pv3 pr3 bb black"
          >
            <a
              className="link dim underline black"
              href="/projects/parking/"
            >
              Parking
            </a>
          </td>
          <td
            className="pv3 pr3 bb black"
          >
            Parking is a live art piece in which users claim a parking spot and hopefully make a human connection.
          </td>
        </tr>
        <tr>
          <td
            className="pv3 pr3 bb black"
          >
            <a
              className="link dim underline black"
              href="/projects/clr/"
            >
              clr
            </a>
          </td>
          <td
            className="pv3 pr3 bb black"
          >
            clr is a go library to manage different color spaces, convert between them and compare colors.
          </td>
        </tr>
        <tr>
          <td
            className="pv3 pr3 bb black"
          >
            <a
              className="link dim underline black"
              href="/projects/fokal/"
            >
              Fokal
            </a>
          </td>
          <td
            className="pv3 pr3 bb black"
          >
            Fokal is a simple photography site with the goal of getting good images seen.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="w-100 mw8 center tc pt4"
  >
    <a
      className="f6 br2 ba ph3 pv2 mb2 dib dark-gray hover-near-white bg-animate hover-bg-dark-gray no-underline index-button"
      href="/projects"
    >
      View More
    </a>
  </div>
</div>
`;
